Fixing browser openning segfault